--- a/style.css
+++ b/style.css
@@ -1,27 +1,2 @@
-title{
-}
-
-body {
-    font-family: "Calibri";
-
-}
-
-h1{
-
-}
-#special_id{
-
-}
-.special_class{
-
-}
-.container{
-    width:;
-    background: ;
-    margin: ;
-    padding: ;
-
-}
-.a{
-
+#title{ color: #505C91;
 }
