--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body{
     text-align: center;
 
 }
-img {width: "250px";
+img {width: length:'250px';
+    height: length:'250px';
+    border-radius:"125px";
     background: black;
     margin: "20px";
     padding: 1px;
@@ -25,15 +27,22 @@ h2{ color: #505C91;
 }
 p {color: #91855E;
     font-family: "Franklin Gothic Medium",serif;
-    font-size: 15pt;
+    font-size: 13pt;
 }
 
 table { color: #91855E;
+    margin-left: auto;
+    margin-right: auto;
     }
 
 ul{ color: #91855E;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 
-
+}
+div {
+    alignment: center;
 }
 
 #special {
